# gerritbot-matrix

./: .gitreview  .zuul.yaml  API_NOTES.md  Containerfile  Containerfile.dhall  README.md  cabal.project  flake.nix  gerritbot-matrix.cabal  gerritbot.dhall
app/: Main.hs  grafana-dashboard.dhall
src/: Config.dhall  EventType.dhall  Gerritbot.hs  Main.hs  Matrix.hs
src/Gerritbot/: Database.hs  Main.hs  Utils.hs
test/: Spec.hs
