cabal-version:      2.4
name:               gerritbot-matrix
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
copyright:          2021 Red Hat

executable gerritbot-matrix
    main-is:          Main.hs
    other-modules:    Gerritbot
                    , Matrix
    build-depends:    base < 5
                    , aeson
                    , exceptions
                    , foldl
                    , gerrit
                    , http-client            ^>= 0.7
                    , http-client-tls        ^>= 0.3
                    , optparse-generic       ^>= 1.4
                    , relude >= 1.0
                    , retry
                    , text                   ^>= 1.2
                    , turtle
                    , SHA                    ^>= 1.6
    hs-source-dirs:   src/
    default-language: Haskell2010
