cabal-version:      2.4
name:               gerritbot-matrix
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
copyright:          2021 Red Hat
extra-source-files: src/**/*.dhall

library
    exposed-modules:  Gerritbot
                    , Gerritbot.Main
                    , Gerritbot.Utils
                    , Matrix
    build-depends:    base < 5
                    , SHA                    ^>= 1.6
                    , aeson
                    , dhall
                    , exceptions
                    , foldl
                    , gerrit
                    , http-client            ^>= 0.7
                    , http-client-tls        ^>= 0.3
                    , optparse-generic       ^>= 1.4
                    , relude >= 1.0
                    , retry
                    , text                   ^>= 1.2
                    , turtle
    hs-source-dirs:   src/
    default-language: Haskell2010

executable gerritbot-matrix
    main-is:          Main.hs
    hs-source-dirs:   app/
    build-depends:    base, gerritbot-matrix
    ghc-options:      -threaded
                      -rtsopts
                      -with-rtsopts=-N

test-suite unit
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , gerritbot-matrix
                    , gerrit
                    , relude
                    , hspec >= 2
  ghc-options:        -Wall
