cabal-version:      2.4
name:               gerritbot-matrix
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
copyright:          2021 Red Hat
extra-source-files: src/**/*.dhall

common common-options
  build-depends:       base                   < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wunused-imports
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
    import:           common-options
    exposed-modules:  Gerritbot
                    , Gerritbot.Database
                    , Gerritbot.Main
                    , Gerritbot.Utils
                    , Matrix
    build-depends:    base < 5
                    , SHA                    ^>= 1.6
                    , aeson
                    , async                  ^>= 2.2
                    , base64
                    , dhall
                    , exceptions
                    , foldl
                    , gerrit
                    , hashtables
                    , http-client            ^>= 0.7
                    , http-client-tls        ^>= 0.3
                    , optparse-generic       ^>= 1.4
                    , relude >= 1.0
                    , retry
                    , say
                    , stm-chans              ^>= 3.0
                    , time
                    , text                   ^>= 1.2
                    , turtle
    hs-source-dirs:   src/

executable gerritbot-matrix
    import:           common-options
    main-is:          Main.hs
    hs-source-dirs:   app/
    build-depends:    base, gerritbot-matrix
    ghc-options:      -threaded
                      -rtsopts
                      -with-rtsopts=-N

test-suite unit
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , gerritbot-matrix
                    , gerrit
                    , relude
                    , hspec >= 2
